--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,9 @@ pageTitle: Eleventy on Glitch
 Welcome to {{ siteData.name }}
 </h1>
 <p>
-  This is test content. This live updates while you type!
+  This is test content. This live updates while you type! 😲
 </p>
 <p>
   Using Eleventy v{{ pkg.dependencies["@11ty/eleventy"] }}.
 </p>
+
