--- a/src/pagines/documents.html
+++ b/src/pagines/documents.html
@@ -1,7 +1,7 @@
 ---
 layout: layouts/default.njk
 permalink: /documents/
-titol: Documents de l'AFA
+title: Documents de l'AFA
 descripcio: Llistat de documents com memòries, resums de consells, etc.
 actualitzat: 2023-10-05
 versio: 1
